<resources>
    <string name="app_name">Inventory App</string>
    <!-- How to populate database -->
    <string name = "insert_product_instr">You can add a new product by clicking the Plus Button!</string>

    <!--Message to fill the fields -->
    <string name= "about_fields">You are advised to fill in all the fields about the product</string>

    <!-- Required fields -->
    <string name= "required_fields">Keep in mind that the "Name", "Price" and "Quantity" fields are needed to add a product</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="sup_number">Supplier\'s phone number</string>
    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <string name="sell_button">Sell</string>
    <string name="dollar">$</string>
    <string name="left"> left</string>

    <string name="editor_activity_title_new_book">New Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>


    <string name="editor_delete_book_successful">Book deleted</string>

    <string name="editor_delete_book_failed">Error with deleting book</string>

    <string name="delete_dialog_msg">Delete this book?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="discard">Discard</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_insert_book_failed">Error with saving book</string>

    <string name="editor_update_book_successful">Book updated</string>

    <string name="editor_update_book_failed">Error with updating book</string>


</resources>
